# SNTP_PicoW

./: CMakeLists.txt  README.md  main.c
